--- a/css/base.css
+++ b/css/base.css
@@ -43,6 +43,6 @@ p {
 @media only screen and (min-width: 35em) {
   h1 {
     font-size: 7em;
-    margin: 2em 4rem 1em;
+    margin: 0 4rem 1em;
   }
 }
